feat : add producer profile setting
